# Genesis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md  clock.md  logging.md
docs/entities/: entity.md  id_generator.md  registry.md
docs/entities/humans/: human.md  human_state.md  needs.md
docs/entities/inventories/: inventory.md  inventory_slot.md
docs/infrastructure/: position.md
docs/itens/: item.md
docs/simulation/: scheduler.md  simulation-engine.md
docs/world/: world.md
src/genesis/: main.py
src/genesis/core/: simulation.py
src/genesis/entities/: entity.py  id_generator.py  registry.py
src/genesis/entities/humans/: human.py  human_state.py  needs.py  sex.py
src/genesis/infrastructure/: logger.py  position.py
src/genesis/items/: item.py
src/genesis/simulation/: clock.py  scheduler.py  simulation.py
src/genesis/world/: grid.py  resource.py  resource_distribution.py  terrain.py  tile.py  world.py  world_generator.py
tests/: test_example.py
tests/core/: test_clock.py  test_scheduler.py  test_simulation.py
tests/entities/: conftest.py  test_entity.py  test_id_generator.py  test_registry.py
tests/entities/humans/: test_human.py  test_human_state.py  test_needs.py  test_sex.py
tests/entities/inventories/: test_inventory.py  test_inventory_slot.py
tests/infrastructure/: test_position.py
tests/items/: item.py
tests/simulation/: test_clock.py  test_simulation.py
tests/world/: test_grid.py  test_resource.py  test_terrain.py  test_tile.py  test_world_generator.py
(+2 files in other folders)
